--- a/stylewip.css
+++ b/stylewip.css
@@ -9,17 +9,18 @@ body{
 }
 #wip-image{
     display: block;
-    width: 50%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: -7%;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 #coming-soon-message{
-    margin: 0;
     position: absolute;
+    left: 50%;
     top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 p#h1{
     text-align: center;
@@ -47,10 +48,9 @@ p{
 }
 #logo{
     display: block;
-    width: 13%;
+    width: 15%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: -5%;
 }
 .social-media-button{
     background-color: #505313;
@@ -69,7 +69,6 @@ p{
     margin-left: 7px;
     margin-bottom: -7px;
 }
-@media (hover: hover) {
 .social-media-button:hover{
     background-color: #505313;
     display: flex;
@@ -81,7 +80,7 @@ p{
     overflow: hidden;
     transition: all 0.2s ease;
 }
-}
+
 .social-media-logo{
     width: 20px;
     margin-right: 10px;
@@ -117,17 +116,16 @@ p{
     }
     #wip-image{
         display: block;
-        width: 90%;
+        width: 80%;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: -7%;
     }
     #coming-soon-message{
-        margin: 0px 30px 0px 30px;
         position: absolute;
+        left: 50%;
         top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
     }
     p#h1{
         text-align: center;
@@ -166,35 +164,34 @@ p{
         display: flex;
         align-items: center;
         border-radius: 20px 20px 20px 20px;
-        width: 35px;
-        height: 35px;
+        width: 25px;
+        height: 25px;
         overflow: hidden;
         transition: all 0.2s ease;
         margin: 10px;
     }
     #Pinterest-logo{
-        width: 20px;
+        width: 15px;
         margin-right: 10px;
-        margin-left: 7px;
-        margin-bottom: -7px;
+        margin-left: 5px;
+        margin-bottom: -5px;
     }
-    @media (hover: hover) {
     .social-media-button:hover{
         background-color: #505313;
         display: flex;
         align-items: center;
         border-radius: 20px 20px 20px 20px;
-        width: 150px;
-        max-width: max-content;
-        height: 35px;
+        width: 25px;
+        height: 25px;
         overflow: hidden;
         transition: all 0.2s ease;
+        margin: 10px;
     }
-    }
+
     .social-media-logo{
-        width: 20px;
-        margin-right: 10px;
-        margin-left: 7px;
+        width: 15px;
+        margin-right: 5px;
+        margin-left: 5px;
     }
     .social-media-button>img, .social-media-button>p{
         display:inline-block;
