--- a/stylewip.css
+++ b/stylewip.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: #fffcf8;
     background-image: url(Assets/Background\ Bullet\ Journal\ Dot\ Pattern.svg);
@@ -109,8 +108,7 @@ p{
         background-image: url(Assets/Background\ Bullet\ Journal\ Dot\ Pattern.svg);
         background-attachment: fixed;
         background-position: center;
-        background-size: 100%;
-        background-repeat: repeat-y;
+        background-size: auto;
         margin: 0px;
     }
     #wip-image{
@@ -125,6 +123,7 @@ p{
         position: absolute;
         left: 50%;
         top: 50%;
+        margin: 0px 30px;
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
