--- a/stylewip.css
+++ b/stylewip.css
@@ -112,10 +112,12 @@ p{
         margin: 0px;
     }
     #wip-image{
-        display: block;
-        width: 100%;
-        margin-top: 20px;
-        margin-bottom: 20px;
+       display: block;
+       width: 100%;
+       margin-left: auto;
+       margin-right: auto;
+       margin-top: 20px;
+       margin-bottom: 20px;
     }
     #coming-soon-message{
         position: absolute;
