--- a/stylewip.css
+++ b/stylewip.css
@@ -1,3 +1,4 @@
+
 body{
     background-color: #fffcf8;
     background-image: url(Assets/Background\ Bullet\ Journal\ Dot\ Pattern.svg);
@@ -102,6 +103,10 @@ p{
     font-size: 18px;
     font-weight: 400;
 }
+.spacer{
+    max-width: 100lvw;
+    margin: 0px -250px;
+}
 @media screen and (max-width: 1000px){
     body{
         background-color: #fffcf8;
@@ -112,15 +117,14 @@ p{
         margin: 0px;
     }
     #wip-image{
-       display: block;
-       width: 120%;
-       margin-left: auto;
-       margin-right: auto;
-       margin-top: 20px;
-       margin-bottom: 20px;
+        display: block;
+        width: 100%;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
     #coming-soon-message{
         position: absolute;
+        align-items: center;
         left: 50%;
         top: 50%;
         -webkit-transform: translate(-50%, -50%);
@@ -206,5 +210,9 @@ p{
         color:#fffcf8;
         font-size: 18px;
         font-weight: 400;
+    }
+    .spacer{
+        width: 100lvw;
+        margin: 0 -30px 0 -30px;
     }
 }
