--- a/stylewip.css
+++ b/stylewip.css
@@ -107,6 +107,9 @@ p{
     max-width: 100lvw;
     margin: 0px -250px;
 }
+a{
+        text-decoration: none;
+}
 @media screen and (max-width: 1000px){
     body{
         background-color: #fffcf8;
@@ -214,5 +217,8 @@ p{
     .spacer{
         width: 100lvw;
         margin: 0 -30px 0 -30px;
+    }
+    a{
+        text-decoration: none;
     }
 }
